@@ -105,13 +105,14 @@ static int init_lcd(int type)
 		lcd_handling = lcd1602_handling;
 
 		memset(&req, 0, len);
-		req.line = 2;
-		strncpy(req.str, "MY AMBIENT -", lcd_max_col);
+		req.line = 1;
+		strncpy(req.str, "12345678901234567", lcd_max_col);
+		//strncpy(req.str, "MY AMBIENT -", lcd_max_col);
 		LCD_WRITE();
 
 		memset(&req, 0, len);
-		req.line = 3;
-		strncpy(req.str, "         - TRACKER", lcd_max_col);
+		req.line = 2;
+		strncpy(req.str, "      - TRACKER", lcd_max_col);
 		LCD_WRITE();
 
 		break;
@@ -123,13 +124,14 @@ static int init_lcd(int type)
 		lcd_handling = lcd2004_handling;
 
 		memset(&req, 0, len);
-		req.line = 1;
-		strncpy(req.str, "MY AMBIENT -", lcd_max_col);
+		req.line = 2;
+		strncpy(req.str, "12345678901234567890", lcd_max_col);
+		//strncpy(req.str, "MY AMBIENT -", lcd_max_col);
 		LCD_WRITE();
 
 		memset(&req, 0, len);
-		req.line = 2;
-		strncpy(req.str, "      - TRACKER", lcd_max_col);
+		req.line = 3;
+		strncpy(req.str, "         - TRACKER", lcd_max_col);
 		LCD_WRITE();
 
 		break;
