@@ -3,6 +3,9 @@
 #
 
 
+2021-06-03 -> ## amtrack stuff
+              add some debugging info
+
 2021-06-02 -> ## amtrack stuff
               fix values[] handling
 
